chore: rename swagger title
