# storage/api-docs/api-docs.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Lara Movies API Documentation",
+        "title": "Laravel Swagger API Documentation",
         "version": "1.0.0"
     },
     "paths": {
@@ -868,6 +868,10 @@
         {
             "name": "Auth",
             "description": "Authentication endpoints"
+        },
+        {
+            "name": "Posts",
+            "description": "Post endpoints"
         }
     ]
 }
